--- a/index.html
+++ b/index.html
@@ -1,1 +1,90 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Historia</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body onclick="um()">
+    <header>
+        <img src="img.jpg" alt="">
+    </header>
+    <main>
+        <button type="button"onclick="dois()"> cadastre-se</button>
+        <script src="script.js"></script>
+        <form>
+            pergunta bla bla bla bla ? <br>
+            <input type="radio" name="oi" id="correta">   A) <br>
+            <input type="radio" name="oi" id="incorreta"> B) <br>
+            <input type="radio" name="oi" id="incorreta"> C) <br>
+            <button type="button"> resposta</button>
+        </form>
+        <form>
+            pergunta bla bla bla bla ? <br>
+            <input type="radio" name="oi" id="correta">   A) <br>
+            <input type="radio" name="oi" id="incorreta"> B) <br>
+            <input type="radio" name="oi" id="incorreta"> C) <br>
+            <button type="button"> resposta</button>
+        </form>
+        <form>
+            pergunta bla bla bla bla ? <br>
+            <input type="radio" name="oi" id="correta">   A) <br>
+            <input type="radio" name="oi" id="incorreta"> B) <br>
+            <input type="radio" name="oi" id="incorreta"> C) <br>
+            <button type="button"> resposta</button>
+        </form>
+        <form>
+            pergunta bla bla bla bla ? <br>
+            <input type="radio" name="oi" id="correta">   A) <br>
+            <input type="radio" name="oi" id="incorreta"> B) <br>
+            <input type="radio" name="oi" id="incorreta"> C) <br>
+            <button type="button"> resposta</button>
+        </form>
+        <form>
+            pergunta bla bla bla bla ? <br>
+            <input type="radio" name="oi" id="correta">   A) <br>
+            <input type="radio" name="oi" id="incorreta"> B) <br>
+            <input type="radio" name="oi" id="incorreta"> C) <br>
+            <button type="button"> resposta</button>
+        </form>
+        <form>
+            pergunta bla bla bla bla ? <br>
+            <input type="radio" name="oi" id="correta">   A) <br>
+            <input type="radio" name="oi" id="incorreta"> B) <br>
+            <input type="radio" name="oi" id="incorreta"> C) <br>
+            <button type="button"> resposta</button>
+        </form>
+        <form>
+            pergunta bla bla bla bla ? <br>
+            <input type="radio" name="oi" id="correta">   A) <br>
+            <input type="radio" name="oi" id="incorreta"> B) <br>
+            <input type="radio" name="oi" id="incorreta"> C) <br>
+            <button type="button"> resposta</button>
+        </form>
+        <form>
+            pergunta bla bla bla bla ? <br>
+            <input type="radio" name="oi" id="correta">   A) <br>
+            <input type="radio" name="oi" id="incorreta"> B) <br>
+            <input type="radio" name="oi" id="incorreta"> C) <br>
+            <button type="button"> resposta</button>
+        </form>
+        <form>
+            pergunta bla bla bla bla ? <br>
+            <input type="radio" name="oi" id="correta">   A) <br>
+            <input type="radio" name="oi" id="incorreta"> B) <br>
+            <input type="radio" name="oi" id="incorreta"> C) <br>
+            <button type="button"> resposta</button>
+        </form>
+        <form>
+            pergunta bla bla bla bla ? <br>
+            <input type="radio" name="oi" id="correta">   A) <br>
+            <input type="radio" name="oi" id="incorreta"> B) <br>
+            <input type="radio" name="oi" id="incorreta"> C) <br>
+            <button type="button"> resposta</button>
+        </form>
 
+    </main>
+    <section>RETRATIL</section>
+</body>
+</html>
