--- a/index.html
+++ b/index.html
@@ -6,84 +6,85 @@
     <title>Historia</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onclick="um()">
+<body>
     <header>
         <img src="img.jpg" alt="">
     </header>
     <main>
-        <button type="button"onclick="dois()"> cadastre-se</button>
-        <script src="script.js"></script>
         <form>
-            pergunta bla bla bla bla ? <br>
-            <input type="radio" name="oi" id="correta">   A) <br>
-            <input type="radio" name="oi" id="incorreta"> B) <br>
-            <input type="radio" name="oi" id="incorreta"> C) <br>
-            <button type="button"> resposta</button>
-        </form>
-        <form>
-            pergunta bla bla bla bla ? <br>
-            <input type="radio" name="oi" id="correta">   A) <br>
-            <input type="radio" name="oi" id="incorreta"> B) <br>
-            <input type="radio" name="oi" id="incorreta"> C) <br>
-            <button type="button"> resposta</button>
-        </form>
-        <form>
-            pergunta bla bla bla bla ? <br>
-            <input type="radio" name="oi" id="correta">   A) <br>
-            <input type="radio" name="oi" id="incorreta"> B) <br>
-            <input type="radio" name="oi" id="incorreta"> C) <br>
-            <button type="button"> resposta</button>
-        </form>
-        <form>
-            pergunta bla bla bla bla ? <br>
-            <input type="radio" name="oi" id="correta">   A) <br>
-            <input type="radio" name="oi" id="incorreta"> B) <br>
-            <input type="radio" name="oi" id="incorreta"> C) <br>
-            <button type="button"> resposta</button>
-        </form>
-        <form>
-            pergunta bla bla bla bla ? <br>
-            <input type="radio" name="oi" id="correta">   A) <br>
-            <input type="radio" name="oi" id="incorreta"> B) <br>
-            <input type="radio" name="oi" id="incorreta"> C) <br>
-            <button type="button"> resposta</button>
-        </form>
-        <form>
-            pergunta bla bla bla bla ? <br>
-            <input type="radio" name="oi" id="correta">   A) <br>
-            <input type="radio" name="oi" id="incorreta"> B) <br>
-            <input type="radio" name="oi" id="incorreta"> C) <br>
-            <button type="button"> resposta</button>
-        </form>
-        <form>
-            pergunta bla bla bla bla ? <br>
-            <input type="radio" name="oi" id="correta">   A) <br>
-            <input type="radio" name="oi" id="incorreta"> B) <br>
-            <input type="radio" name="oi" id="incorreta"> C) <br>
-            <button type="button"> resposta</button>
-        </form>
-        <form>
-            pergunta bla bla bla bla ? <br>
-            <input type="radio" name="oi" id="correta">   A) <br>
-            <input type="radio" name="oi" id="incorreta"> B) <br>
-            <input type="radio" name="oi" id="incorreta"> C) <br>
-            <button type="button"> resposta</button>
-        </form>
-        <form>
-            pergunta bla bla bla bla ? <br>
-            <input type="radio" name="oi" id="correta">   A) <br>
-            <input type="radio" name="oi" id="incorreta"> B) <br>
-            <input type="radio" name="oi" id="incorreta"> C) <br>
-            <button type="button"> resposta</button>
-        </form>
-        <form>
-            pergunta bla bla bla bla ? <br>
-            <input type="radio" name="oi" id="correta">   A) <br>
-            <input type="radio" name="oi" id="incorreta"> B) <br>
-            <input type="radio" name="oi" id="incorreta"> C) <br>
-            <button type="button"> resposta</button>
-        </form>
+            <h3>bla bla bla bla ?</h3>
+            <input type="radio" name="resposta" value="correta"> a) <br>
+            <input type="radio" name="resposta" value="incorreta"> B) <br>
+            <input type="radio" name="resposta" value="incorreta"> C) <br>
+            <input type="radio" name="resposta" value="incorreta"> C) <br>
+            <p id="resultado_1"></p>
 
+            <h3>bla bla bla bla ?</h3>
+            <input type="radio" name="resposta" value="correta"> a) <br>
+            <input type="radio" name="resposta" value="incorreta"> B) <br>
+            <input type="radio" name="resposta" value="incorreta"> C) <br>
+            <input type="radio" name="resposta" value="incorreta"> C) <br>
+            <p id="resultado_2"></p>
+
+            <h3>bla bla bla bla ?</h3>
+            <input type="radio" name="resposta" value="correta"> a) <br>
+            <input type="radio" name="resposta" value="incorreta"> B) <br>
+            <input type="radio" name="resposta" value="incorreta"> C) <br>
+            <input type="radio" name="resposta" value="incorreta"> C) <br>
+            <p id="resultado_3"></p>
+
+            <h3>bla bla bla bla ?</h3>
+            <input type="radio" name="resposta" value="correta"> a) <br>
+            <input type="radio" name="resposta" value="incorreta"> B) <br>
+            <input type="radio" name="resposta" value="incorreta"> C) <br>
+            <input type="radio" name="resposta" value="incorreta"> C) <br>
+            <p id="resultado_4"></p>
+
+            <h3>bla bla bla bla ?</h3>
+            <input type="radio" name="resposta" value="correta"> a) <br>
+            <input type="radio" name="resposta" value="incorreta"> B) <br>
+            <input type="radio" name="resposta" value="incorreta"> C) <br>
+            <input type="radio" name="resposta" value="incorreta"> C) <br>
+            <p id="resultado_5"></p>
+
+            <h3>bla bla bla bla ?</h3>
+            <input type="radio" name="resposta" value="correta"> a) <br>
+            <input type="radio" name="resposta" value="incorreta"> B) <br>
+            <input type="radio" name="resposta" value="incorreta"> C) <br>
+            <input type="radio" name="resposta" value="incorreta"> C) <br>
+            <p id="resultado_6"></p>
+
+            <h3>bla bla bla bla ?</h3>
+            <input type="radio" name="resposta" value="correta"> a) <br>
+            <input type="radio" name="resposta" value="incorreta"> B) <br>
+            <input type="radio" name="resposta" value="incorreta"> C) <br>
+            <input type="radio" name="resposta" value="incorreta"> C) <br>
+            <p id="resultado_7"></p>
+
+            <h3>bla bla bla bla ?</h3>
+            <input type="radio" name="resposta" value="correta"> a) <br>
+            <input type="radio" name="resposta" value="incorreta"> B) <br>
+            <input type="radio" name="resposta" value="incorreta"> C) <br>
+            <input type="radio" name="resposta" value="incorreta"> C) <br>
+            <p id="resultado_8"></p>
+
+            <h3>bla bla bla bla ?</h3>
+            <input type="radio" name="resposta" value="correta"> a) <br>
+            <input type="radio" name="resposta" value="incorreta"> B) <br>
+            <input type="radio" name="resposta" value="incorreta"> C) <br>
+            <input type="radio" name="resposta" value="incorreta"> C) <br>
+            <p id="resultado_9"></p>
+
+            <h3>bla bla bla bla ?</h3>
+            <input type="radio" name="resposta" value="correta"> a) <br>
+            <input type="radio" name="resposta" value="incorreta"> B) <br>
+            <input type="radio" name="resposta" value="incorreta"> C) <br>
+            <input type="radio" name="resposta" value="incorreta"> C) <br>
+            <p id="resultado_10"></p>
+            <button type="button" onclick="botao_resposta()"> verificar</button>
+        </form>
+        <script src="script.js"></script>
+       
     </main>
     <section>RETRATIL</section>
 </body>
