--- a/index.html
+++ b/index.html
@@ -13,73 +13,73 @@
     <main>
         <form>
             <h3>bla bla bla bla ?</h3>
-            <input type="radio" name="resposta" value="correta"> a) <br>
-            <input type="radio" name="resposta" value="incorreta"> B) <br>
-            <input type="radio" name="resposta" value="incorreta"> C) <br>
-            <input type="radio" name="resposta" value="incorreta"> C) <br>
-            <p id="resultado_1"></p>
+            <input type="radio" name="resposta1" value="correta"> a) <br>
+            <input type="radio" name="resposta1" value="incorreta"> B) <br>
+            <input type="radio" name="resposta1" value="incorreta"> C) <br>
+            <input type="radio" name="resposta1" value="incorreta"> C) <br>
+            <p id="resultado_1" class="correto"></p><p id="errado1" class="errado"></p>
 
             <h3>bla bla bla bla ?</h3>
-            <input type="radio" name="resposta" value="correta"> a) <br>
-            <input type="radio" name="resposta" value="incorreta"> B) <br>
-            <input type="radio" name="resposta" value="incorreta"> C) <br>
-            <input type="radio" name="resposta" value="incorreta"> C) <br>
-            <p id="resultado_2"></p>
+            <input type="radio" name="resposta2" value="correta"> a) <br>
+            <input type="radio" name="resposta2" value="incorreta"> B) <br>
+            <input type="radio" name="resposta2" value="incorreta"> C) <br>
+            <input type="radio" name="resposta2" value="incorreta"> C) <br>
+            <p id="resultado_2" class="correto"></p><p id="errado2" class="errado"></p>
 
             <h3>bla bla bla bla ?</h3>
-            <input type="radio" name="resposta" value="correta"> a) <br>
-            <input type="radio" name="resposta" value="incorreta"> B) <br>
-            <input type="radio" name="resposta" value="incorreta"> C) <br>
-            <input type="radio" name="resposta" value="incorreta"> C) <br>
-            <p id="resultado_3"></p>
+            <input type="radio" name="resposta3" value="correta"> a) <br>
+            <input type="radio" name="resposta3" value="incorreta"> B) <br>
+            <input type="radio" name="resposta3" value="incorreta"> C) <br>
+            <input type="radio" name="resposta3" value="incorreta"> C) <br>
+            <p id="resultado_3" class="correto"></p><p id="errado3" class="errado"></p>
 
             <h3>bla bla bla bla ?</h3>
-            <input type="radio" name="resposta" value="correta"> a) <br>
-            <input type="radio" name="resposta" value="incorreta"> B) <br>
-            <input type="radio" name="resposta" value="incorreta"> C) <br>
-            <input type="radio" name="resposta" value="incorreta"> C) <br>
-            <p id="resultado_4"></p>
+            <input type="radio" name="resposta4" value="correta"> a) <br>
+            <input type="radio" name="resposta4" value="incorreta"> B) <br>
+            <input type="radio" name="resposta4" value="incorreta"> C) <br>
+            <input type="radio" name="resposta4" value="incorreta"> C) <br>
+            <p id="resultado_4" class="correto"></p><p id="errado4" class="errado"></p>
 
             <h3>bla bla bla bla ?</h3>
-            <input type="radio" name="resposta" value="correta"> a) <br>
-            <input type="radio" name="resposta" value="incorreta"> B) <br>
-            <input type="radio" name="resposta" value="incorreta"> C) <br>
-            <input type="radio" name="resposta" value="incorreta"> C) <br>
+            <input type="radio" name="resposta5" value="correta"> a) <br>
+            <input type="radio" name="resposta5" value="incorreta"> B) <br>
+            <input type="radio" name="resposta5" value="incorreta"> C) <br>
+            <input type="radio" name="resposta5" value="incorreta"> C) <br>
             <p id="resultado_5"></p>
 
             <h3>bla bla bla bla ?</h3>
-            <input type="radio" name="resposta" value="correta"> a) <br>
-            <input type="radio" name="resposta" value="incorreta"> B) <br>
-            <input type="radio" name="resposta" value="incorreta"> C) <br>
-            <input type="radio" name="resposta" value="incorreta"> C) <br>
+            <input type="radio" name="resposta6" value="correta"> a) <br>
+            <input type="radio" name="resposta6" value="incorreta"> B) <br>
+            <input type="radio" name="resposta6" value="incorreta"> C) <br>
+            <input type="radio" name="resposta6" value="incorreta"> C) <br>
             <p id="resultado_6"></p>
 
             <h3>bla bla bla bla ?</h3>
-            <input type="radio" name="resposta" value="correta"> a) <br>
-            <input type="radio" name="resposta" value="incorreta"> B) <br>
-            <input type="radio" name="resposta" value="incorreta"> C) <br>
-            <input type="radio" name="resposta" value="incorreta"> C) <br>
+            <input type="radio" name="resposta7" value="correta"> a) <br>
+            <input type="radio" name="resposta7" value="incorreta"> B) <br>
+            <input type="radio" name="resposta7" value="incorreta"> C) <br>
+            <input type="radio" name="resposta7" value="incorreta"> C) <br>
             <p id="resultado_7"></p>
 
             <h3>bla bla bla bla ?</h3>
-            <input type="radio" name="resposta" value="correta"> a) <br>
-            <input type="radio" name="resposta" value="incorreta"> B) <br>
-            <input type="radio" name="resposta" value="incorreta"> C) <br>
-            <input type="radio" name="resposta" value="incorreta"> C) <br>
+            <input type="radio" name="resposta8" value="correta"> a) <br>
+            <input type="radio" name="resposta8" value="incorreta"> B) <br>
+            <input type="radio" name="resposta8" value="incorreta"> C) <br>
+            <input type="radio" name="resposta8" value="incorreta"> C) <br>
             <p id="resultado_8"></p>
 
             <h3>bla bla bla bla ?</h3>
-            <input type="radio" name="resposta" value="correta"> a) <br>
-            <input type="radio" name="resposta" value="incorreta"> B) <br>
-            <input type="radio" name="resposta" value="incorreta"> C) <br>
-            <input type="radio" name="resposta" value="incorreta"> C) <br>
+            <input type="radio" name="resposta9" value="correta"> a) <br>
+            <input type="radio" name="resposta9" value="incorreta"> B) <br>
+            <input type="radio" name="resposta9" value="incorreta"> C) <br>
+            <input type="radio" name="resposta9" value="incorreta"> C) <br>
             <p id="resultado_9"></p>
 
             <h3>bla bla bla bla ?</h3>
-            <input type="radio" name="resposta" value="correta"> a) <br>
-            <input type="radio" name="resposta" value="incorreta"> B) <br>
-            <input type="radio" name="resposta" value="incorreta"> C) <br>
-            <input type="radio" name="resposta" value="incorreta"> C) <br>
+            <input type="radio" name="resposta10" value="correta"> a) <br>
+            <input type="radio" name="resposta10" value="incorreta"> B) <br>
+            <input type="radio" name="resposta10" value="incorreta"> C) <br>
+            <input type="radio" name="resposta10" value="incorreta"> C) <br>
             <p id="resultado_10"></p>
             <button type="button" onclick="botao_resposta()"> verificar</button>
         </form>
